--- a/platforms/linux-s390x/meson.ini
+++ b/platforms/linux-s390x/meson.ini
@@ -13,6 +13,7 @@ ld = 's390x-linux-gnu-gcc-ld'
 strip = 's390x-linux-gnu-strip'
 ranlib = 's390x-linux-gnu-gcc-ranlib'
 pkg-config = ['s390x-linux-gnu-pkg-config', '--static']
+#exe_wrapper = 'qemu-s390x-static'
 
 [built-in options]
 libdir = 'lib'
