Meson: uses system directories in machine files

--- a/platforms/darwin-arm64v8/meson.ini
+++ b/platforms/darwin-arm64v8/meson.ini
@@ -12,4 +12,8 @@ objcpp = 'clang++'
 strip = ['strip', '-x']
 
 [built-in options]
+datadir = '/usr/local/share'
+localedir = '/usr/local/share/locale'
+sysconfdir = '/usr/local/etc'
+localstatedir = '/usr/local/var'
 wrap_mode = 'nofallback'
