--- a/platforms/linux-arm64v8/meson.ini
+++ b/platforms/linux-arm64v8/meson.ini
@@ -4,4 +4,8 @@ pkg-config = ['pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
+datadir = '/usr/share'
+localedir = '/usr/share/locale'
+sysconfdir = '/etc'
+localstatedir = '/var'
 wrap_mode = 'nofallback'
