--- a/platforms/linuxmusl-x64/meson.ini
+++ b/platforms/linuxmusl-x64/meson.ini
@@ -8,4 +8,8 @@ pkg-config = ['pkg-config', '--static']
 has_function_inotify_init1 = false
 
 [built-in options]
+datadir = '/usr/share'
+localedir = '/usr/share/locale'
+sysconfdir = '/etc'
+localstatedir = '/var'
 wrap_mode = 'nofallback'
