--- a/platforms/linux-armv7/meson.ini
+++ b/platforms/linux-armv7/meson.ini
@@ -16,4 +16,8 @@ pkg-config = ['arm-linux-gnueabihf-pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
+datadir = '/usr/share'
+localedir = '/usr/share/locale'
+sysconfdir = '/etc'
+localstatedir = '/var'
 wrap_mode = 'nofallback'
