--- a/platforms/linux-s390x/meson.ini
+++ b/platforms/linux-s390x/meson.ini
@@ -17,4 +17,8 @@ pkg-config = ['s390x-linux-gnu-pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
+datadir = '/usr/share'
+localedir = '/usr/share/locale'
+sysconfdir = '/etc'
+localstatedir = '/var'
 wrap_mode = 'nofallback'
