--- a/platforms/linux-armv6/Dockerfile
+++ b/platforms/linux-armv6/Dockerfile
@@ -23,6 +23,7 @@ RUN \
     git \
     gperf \
     jq \
+    libssl-dev \
     libtool \
     ninja-build \
     pkg-config \
@@ -36,6 +37,7 @@ RUN \
     --profile minimal \
     && \
   rustup target add arm-unknown-linux-gnueabihf && \
+  cargo install cargo-c && \
   pip3 install meson
 
 # Compiler settings
