--- a/platforms/linux-x64/Dockerfile
+++ b/platforms/linux-x64/Dockerfile
@@ -29,6 +29,7 @@ RUN \
     jq \
     make \
     nasm \
+    openssl-devel \
     patch \
     pkgconfig \
     python3 \
@@ -47,6 +48,7 @@ RUN \
     --no-modify-path \
     --profile minimal \
     && \
+  cargo install cargo-c && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
   pip3 install meson ninja packaging
 
