--- a/platforms/linuxmusl-x64/Dockerfile
+++ b/platforms/linuxmusl-x64/Dockerfile
@@ -9,6 +9,11 @@ ENV \
   CARGO_HOME="/usr/local/cargo" \
   PATH="/usr/local/cargo/bin:$PATH"
 
+# Musl defaults to static libs but we need them to be dynamic for host toolchain.
+# The toolchain will produce static libs by default.
+ENV \
+  RUSTFLAGS="-Ctarget-feature=-crt-static"
+
 # Build dependencies
 RUN \
   apk update && apk upgrade && \
@@ -28,6 +33,7 @@ RUN \
     linux-headers \
     nasm \
     ninja \
+    openssl-dev \
     pkgconf \
     py3-packaging \
     py3-pip \
@@ -37,6 +43,7 @@ RUN \
     --no-modify-path \
     --profile minimal \
     && \
+  cargo install cargo-c && \
   pip3 install meson
 
 # Compiler settings
@@ -45,11 +52,6 @@ ENV \
   PLATFORM="linuxmusl-x64" \
   FLAGS="-march=nehalem" \
   MESON="--cross-file=/root/meson.ini"
-
-# Musl defaults to static libs but we need them to be dynamic for host toolchain.
-# The toolchain will produce static libs by default.
-ENV \
-  RUSTFLAGS="-Ctarget-feature=-crt-static"
 
 COPY Toolchain.cmake /root/
 COPY meson.ini /root/
