--- a/platforms/linux-s390x/Dockerfile
+++ b/platforms/linux-s390x/Dockerfile
@@ -24,6 +24,7 @@ RUN \
     git \
     gperf \
     jq \
+    libssl-dev \
     libtool \
     ninja-build \
     pkg-config \
@@ -35,6 +36,7 @@ RUN \
     --profile minimal \
     && \
   rustup target add s390x-unknown-linux-gnu && \
+  cargo install cargo-c && \
   pip3 install meson
 
 # Handy for debugging the compiled targets in Highway (hwy_list_targets)
