Remove engines property from package.json files
https://github.com/lovell/sharp/issues/4130

--- a/npm/linux-arm64/package.json
+++ b/npm/linux-arm64/package.json
@@ -27,10 +27,7 @@
     "./package": "./package.json",
     "./versions": "./versions.json"
   },
-  "engines": {
-    "npm": ">=9.6.5",
-    "yarn": ">=3.2.0",
-    "pnpm": ">=7.1.0",
+  "config": {
     "glibc": ">=2.26"
   },
   "os": [
