--- a/npm/linux-arm/package.json
+++ b/npm/linux-arm/package.json
@@ -27,10 +27,7 @@
     "./versions": "./versions.json"
   },
   "type": "commonjs",
-  "engines": {
-    "npm": ">=9.6.5",
-    "yarn": ">=3.2.0",
-    "pnpm": ">=7.1.0",
+  "config": {
     "glibc": ">=2.28"
   },
   "os": [
