--- a/npm/linuxmusl-arm64/package.json
+++ b/npm/linuxmusl-arm64/package.json
@@ -27,10 +27,7 @@
     "./package": "./package.json",
     "./versions": "./versions.json"
   },
-  "engines": {
-    "npm": ">=9.6.5",
-    "yarn": ">=3.2.0",
-    "pnpm": ">=7.1.0",
+  "config": {
     "musl": ">=1.2.2"
   },
   "os": [
