Add tomli dependency in Docker containers
Required by Cargo projects since Meson 1.5.0. Python >= 3.11 have
one built-in, older Python versions require either the external
`tomli` module or `toml2json` program.

--- a/platforms/linux-arm64v8/Dockerfile
+++ b/platforms/linux-arm64v8/Dockerfile
@@ -51,7 +51,7 @@ RUN \
     && \
   cargo install cargo-c && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
-  pip3 install meson ninja packaging
+  pip3 install meson ninja packaging tomli
 
 # Compiler settings
 ENV \
