--- a/platforms/linux-ppc64le/meson.ini
+++ b/platforms/linux-ppc64le/meson.ini
@@ -1,7 +1,7 @@
 [host_machine]
 system = 'linux'
-cpu_family = 'ppc64le'
-cpu = 'ppc64le'
+cpu_family = 'ppc64'
+cpu = 'powerpc64le'
 endian = 'little'
 
 [binaries]
