--- a/platforms/linux-ppc64le/Dockerfile
+++ b/platforms/linux-ppc64le/Dockerfile
@@ -23,6 +23,7 @@ RUN \
     git \
     gperf \
     jq \
+    libssl-dev \
     libtool \
     ninja-build \
     pkg-config \
@@ -34,7 +35,8 @@ RUN \
     --profile minimal \
     && \
   rustup target add powerpc64le-unknown-linux-gnu && \
-  pip3 install meson
+  cargo install cargo-c && \
+  pip3 install meson tomli
 
 # Handy for debugging the compiled targets in Highway (hwy_list_targets)
 #RUN apt-get install -y qemu-user-static
