Tested locally, should build now

--- a/platforms/linux-ppc64le/meson.ini
+++ b/platforms/linux-ppc64le/meson.ini
@@ -12,9 +12,12 @@ nm = 'powerpc64le-linux-gnu-gcc-nm'
 ld = 'powerpc64le-linux-gnu-gcc-ld'
 strip = 'powerpc64le-linux-gnu-strip'
 ranlib = 'powerpc64le-linux-gnu-gcc-ranlib'
-pkg-config = ['powerpc64le-linux-gnu-pkg-config', '--static']
-#exe_wrapper = 'qemu-ppc64le-static'
+#exe_wrapper = 'qemu-s390x-static'
 
 [built-in options]
 libdir = 'lib'
+datadir = '/usr/share'
+localedir = '/usr/share/locale'
+sysconfdir = '/etc'
+localstatedir = '/var'
 wrap_mode = 'nofallback'
