--- a/platforms/linux-ppc64le/meson.ini
+++ b/platforms/linux-ppc64le/meson.ini
@@ -12,7 +12,7 @@ nm = 'powerpc64le-linux-gnu-gcc-nm'
 ld = 'powerpc64le-linux-gnu-gcc-ld'
 strip = 'powerpc64le-linux-gnu-strip'
 ranlib = 'powerpc64le-linux-gnu-gcc-ranlib'
-#exe_wrapper = 'qemu-s390x-static'
+#exe_wrapper = 'qemu-ppc64le-static'
 
 [built-in options]
 libdir = 'lib'
