--- a/npm/package.json
+++ b/npm/package.json
@@ -11,6 +11,7 @@
     "linux-arm64",
     "linuxmusl-arm64",
     "linuxmusl-x64",
+    "linux-ppc64",
     "linux-s390x",
     "linux-x64",
     "win32-ia32",
