Revert "linux-armv6: upgrade to Debian 11 (glibc 2.31)"
This reverts commit d8ce72127239048574784145b5b55df3595f88ff.

--- a/platforms/linux-armv6/meson.ini
+++ b/platforms/linux-armv6/meson.ini
@@ -5,13 +5,13 @@ cpu = 'armv6-a'
 endian = 'little'
 
 [binaries]
-c = 'arm-linux-gnueabihf-gcc'
-cpp = 'arm-linux-gnueabihf-g++'
-ar = 'arm-linux-gnueabihf-ar'
-nm = 'arm-linux-gnueabihf-gcc-nm'
-ld = 'arm-linux-gnueabihf-gcc-ld'
-strip = 'arm-linux-gnueabihf-strip'
-ranlib = 'arm-linux-gnueabihf-gcc-ranlib'
+c = 'arm-rpi-linux-gnueabihf-gcc'
+cpp = 'arm-rpi-linux-gnueabihf-g++'
+ar = 'arm-rpi-linux-gnueabihf-ar'
+nm = 'arm-rpi-linux-gnueabihf-gcc-nm'
+ld = 'arm-rpi-linux-gnueabihf-gcc-ld'
+strip = 'arm-rpi-linux-gnueabihf-strip'
+ranlib = 'arm-rpi-linux-gnueabihf-gcc-ranlib'
 
 [built-in options]
 libdir = 'lib'
