cargo-c: ensure deterministic build

--- a/platforms/linux-arm64v8/Dockerfile
+++ b/platforms/linux-arm64v8/Dockerfile
@@ -49,7 +49,7 @@ RUN \
     --profile minimal \
     --default-host aarch64-unknown-linux-gnu \
     && \
-  cargo install cargo-c && \
+  cargo install cargo-c --locked && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
   pip3 install meson ninja packaging tomli
 
