--- a/platforms/linux-ppc64le/Dockerfile
+++ b/platforms/linux-ppc64le/Dockerfile
@@ -35,7 +35,7 @@ RUN \
     --profile minimal \
     && \
   rustup target add powerpc64le-unknown-linux-gnu && \
-  cargo install cargo-c && \
+  cargo install cargo-c --locked && \
   pip3 install meson tomli
 
 # Handy for debugging the compiled targets in Highway (hwy_list_targets)
