Linux: ensure GLib's `g_print*()` functions wrap the system ones
C99 `printf()` semantics are well-supported by these Linux
cross-targets, avoids the need for gnulib compat functions.

An alternative is setting up QEMU when cross-compiling, as this
functionality is gated by `meson.can_run_host_binaries()`, but
this is a bit simpler.

--- a/platforms/linux-s390x/meson.ini
+++ b/platforms/linux-s390x/meson.ini
@@ -14,6 +14,12 @@ strip = 's390x-linux-gnu-strip'
 ranlib = 's390x-linux-gnu-gcc-ranlib'
 #exe_wrapper = 'qemu-s390x-static'
 
+[properties]
+# https://docs.gtk.org/glib/cross-compiling.html#cross-properties
+have_c99_vsnprintf = true
+have_c99_snprintf = true
+have_unix98_printf = true
+
 [built-in options]
 libdir = 'lib'
 datadir = '/usr/share'
