--- a/platforms/linux-armv6/meson.ini
+++ b/platforms/linux-armv6/meson.ini
@@ -13,6 +13,12 @@ ld = 'arm-rpi-linux-gnueabihf-gcc-ld'
 strip = 'arm-rpi-linux-gnueabihf-strip'
 ranlib = 'arm-rpi-linux-gnueabihf-gcc-ranlib'
 
+[properties]
+# https://docs.gtk.org/glib/cross-compiling.html#cross-properties
+have_c99_vsnprintf = true
+have_c99_snprintf = true
+have_unix98_printf = true
+
 [built-in options]
 libdir = 'lib'
 datadir = '/usr/share'
