--- a/platforms/linux-ppc64le/meson.ini
+++ b/platforms/linux-ppc64le/meson.ini
@@ -14,6 +14,12 @@ strip = 'powerpc64le-linux-gnu-strip'
 ranlib = 'powerpc64le-linux-gnu-gcc-ranlib'
 #exe_wrapper = 'qemu-ppc64le-static'
 
+[properties]
+# https://docs.gtk.org/glib/cross-compiling.html#cross-properties
+have_c99_vsnprintf = true
+have_c99_snprintf = true
+have_unix98_printf = true
+
 [built-in options]
 libdir = 'lib'
 datadir = '/usr/share'
