--- a/platforms/linuxmusl-arm64v8/meson.ini
+++ b/platforms/linuxmusl-arm64v8/meson.ini
@@ -13,10 +13,14 @@ ld = 'aarch64-linux-musl-ld'
 strip = 'aarch64-linux-musl-strip'
 ranlib = 'aarch64-linux-musl-ranlib'
 
+[properties]
 # Ensure we disable the inotify backend in GIO
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
-[properties]
 has_function_inotify_init1 = false
+# https://docs.gtk.org/glib/cross-compiling.html#cross-properties
+have_c99_vsnprintf = true
+have_c99_snprintf = true
+have_unix98_printf = true
 
 [built-in options]
 libdir = 'lib'
