--- a/npm/linux-ppc64/package.json
+++ b/npm/linux-ppc64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips-linux-ppc64",
-  "version": "1.1.0-rc5",
+  "version": "1.1.0",
   "description": "Prebuilt libvips and dependencies for use with sharp on Linux (glibc) ppc64le",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://sharp.pixelplumbing.com",
