--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips",
-  "version": "1.1.0-rc5",
+  "version": "1.1.0",
   "private": "true",
   "workspaces": [
     "dev",
