--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          pip3 install meson ninja packaging
+          pip3 install meson==1.7.2 ninja packaging
           brew install automake nasm
       - name: Build ${{ matrix.platform }}
         id: build-release
