--- a/platforms/linux-x64/Dockerfile
+++ b/platforms/linux-x64/Dockerfile
@@ -50,7 +50,7 @@ RUN \
     && \
   cargo install cargo-c --locked && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
-  pip3 install meson ninja packaging tomli
+  pip3 install meson==1.7.2 ninja packaging tomli
 
 # Compiler settings
 ENV \
