--- a/platforms/linuxmusl-arm64v8/Dockerfile
+++ b/platforms/linuxmusl-arm64v8/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.15
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
-# Create Alpine 3.15 (musl 1.2.2) container suitable for cross-compiling musl-based Linux ARM64v8-A binaries
+# Create Alpine 3.15 (musl 1.2.2) container suitable for building musl-based Linux ARM64v8-A binaries
 
 # Path settings
 ENV \
@@ -11,9 +11,8 @@ ENV \
 
 # Musl defaults to static libs but we need them to be dynamic for host toolchain.
 # The toolchain will produce static libs by default.
-# We also need to add the directory containing libc.a to the library search path.
 ENV \
-  RUSTFLAGS="-Ctarget-feature=-crt-static -Lnative=/aarch64-linux-musl/lib"
+  RUSTFLAGS="-Ctarget-feature=-crt-static"
 
 # Build dependencies
 RUN \
@@ -39,22 +38,18 @@ RUN \
     py3-pip \
     python3 \
     && \
-  curl -Ls https://github.com/lovell/aarch64-linux-musl-crosstools/archive/main.tar.gz | tar -hxzC / --strip-components=2 && \
-  ln -s /usr/bin/pkg-config /bin/aarch64-linux-musl-pkg-config && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
     --profile minimal \
+    --default-host aarch64-unknown-linux-musl \
     && \
-  rustup target add aarch64-unknown-linux-musl && \
   cargo install cargo-c --locked && \
   pip3 install meson==1.7.2
 
 # Compiler settings
 ENV \
-  PKG_CONFIG="aarch64-linux-musl-pkg-config --static" \
+  PKG_CONFIG="pkg-config --static" \
   PLATFORM="linuxmusl-arm64v8" \
-  CHOST="aarch64-linux-musl" \
-  RUST_TARGET="aarch64-unknown-linux-musl" \
   FLAGS="-march=armv8-a" \
   MESON="--cross-file=/root/meson.ini"
 
