--- a/platforms/linuxmusl-arm64v8/meson.ini
+++ b/platforms/linuxmusl-arm64v8/meson.ini
@@ -1,29 +1,12 @@
-[host_machine]
-system = 'linux'
-cpu_family = 'aarch64'
-cpu = 'armv8-a'
-endian = 'little'
-
 [binaries]
-c = 'aarch64-linux-musl-gcc'
-cpp = 'aarch64-linux-musl-g++'
-ar = 'aarch64-linux-musl-ar'
-nm = 'aarch64-linux-musl-nm'
-ld = 'aarch64-linux-musl-ld'
-strip = 'aarch64-linux-musl-strip'
-ranlib = 'aarch64-linux-musl-ranlib'
+strip = 'strip'
 
 [properties]
 # Ensure we disable the inotify backend in GIO
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
 has_function_inotify_init1 = false
-# https://docs.gtk.org/glib/cross-compiling.html#cross-properties
-have_c99_vsnprintf = true
-have_c99_snprintf = true
-have_unix98_printf = true
 
 [built-in options]
-libdir = 'lib'
 datadir = '/usr/share'
 localedir = '/usr/share/locale'
 sysconfdir = '/etc'
