--- a/npm/package.json
+++ b/npm/package.json
@@ -12,6 +12,7 @@
     "linuxmusl-arm64",
     "linuxmusl-x64",
     "linux-ppc64",
+    "linux-riscv64",
     "linux-s390x",
     "linux-x64",
     "win32-arm64",
