CI: Use native ARM64-based runner for darwin-arm64v8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
             platform: 'win32-arm64v8'
           - os: 'macos-13'
             platform: 'darwin-x64'
-          - os: 'macos-13'
+          - os: 'macos-14'
             platform: 'darwin-arm64v8'
           - os: 'ubuntu-24.04-arm'
             platform: 'linux-arm64v8'
@@ -57,8 +57,8 @@ jobs:
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          pip3 install meson==1.7.2 ninja packaging
-          brew install automake nasm
+          pipx install meson
+          brew install automake nasm python-packaging
       - name: Build ${{ matrix.platform }}
         run: ./build.sh ${{ matrix.platform }}
       - name: Upload ${{ matrix.platform }} artifact
