--- a/npm/linux-riscv64/package.json
+++ b/npm/linux-riscv64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips-linux-riscv64",
-  "version": "1.1.0",
+  "version": "1.2.0-rc.0",
   "description": "Prebuilt libvips and dependencies for use with sharp on Linux (glibc) RISC-V 64-bit",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://sharp.pixelplumbing.com",
