--- a/platforms/linuxmusl-arm64v8/Dockerfile
+++ b/platforms/linuxmusl-arm64v8/Dockerfile
@@ -44,7 +44,7 @@ RUN \
     --default-host aarch64-unknown-linux-musl \
     && \
   cargo install cargo-c --locked && \
-  pip3 install meson
+  pip3 install meson==1.7.2
 
 # Compiler settings
 ENV \
