--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Populate npm workspace
         run: ./populate-npm-workspace.sh
       - name: Create npm workspace tarball
-        run: tar -caf npm-workspace.tar.xz npm
+        run: tar -vcaf npm-workspace.tar.xz -C npm .
       - name: Create GitHub release for tag
         if: startsWith(github.ref, 'refs/tags/v')
         uses: ncipollo/release-action@v1
