--- a/platforms/linux-armv6/Dockerfile
+++ b/platforms/linux-armv6/Dockerfile
@@ -35,8 +35,9 @@ RUN \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
     --profile minimal \
+    --target arm-unknown-linux-gnueabihf \
+    --default-toolchain nightly \
     && \
-  rustup target add arm-unknown-linux-gnueabihf && \
   cargo install cargo-c --locked && \
   pip3 install meson==1.7.2 tomli
 
@@ -47,6 +48,7 @@ ENV \
   CHOST="arm-rpi-linux-gnueabihf" \
   RUST_TARGET="arm-unknown-linux-gnueabihf" \
   FLAGS="-marm -mcpu=arm1176jzf-s -mfpu=vfp -mfloat-abi=hard" \
+  RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" \
   WITHOUT_NEON="true" \
   # Highway requires NEON (Armv7+)
   WITHOUT_HIGHWAY="true" \
