Linux: avoid using gold as the linker

--- a/platforms/linux-arm64v8/Dockerfile
+++ b/platforms/linux-arm64v8/Dockerfile
@@ -40,7 +40,7 @@ RUN \
   ln -s /usr/bin/gcc10-as /usr/bin/as && \
   ln -s /usr/bin/gcc10-ar /usr/bin/ar && \
   ln -s /usr/bin/gcc10-nm /usr/bin/nm && \
-  ln -s /usr/bin/gcc10-ld /usr/bin/ld && \
+  ln -s /usr/bin/gcc10-ld.bfd /usr/bin/ld && \
   ln -s /usr/bin/gcc10-strip /usr/bin/strip && \
   ln -s /usr/bin/gcc10-ranlib /usr/bin/ranlib && \
   ln -s /usr/bin/gcc10-readelf /usr/bin/readelf && \
@@ -58,8 +58,8 @@ RUN \
 ENV \
   PKG_CONFIG="pkg-config --static" \
   PLATFORM="linux-arm64v8" \
-  FLAGS="-march=armv8-a" \
-  RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" \
+  FLAGS="-march=armv8-a -fuse-ld=bfd" \
+  RUSTFLAGS="-Clink-arg=-fuse-ld=bfd -Zlocation-detail=none -Zfmt-debug=none" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
