--- a/platforms/linux-x64/Dockerfile
+++ b/platforms/linux-x64/Dockerfile
@@ -40,7 +40,7 @@ RUN \
   ln -s /usr/bin/gcc10-g++ /usr/bin/c++ && \
   ln -s /usr/bin/gcc10-ar /usr/bin/ar && \
   ln -s /usr/bin/gcc10-nm /usr/bin/nm && \
-  ln -s /usr/bin/gcc10-ld /usr/bin/ld && \
+  ln -s /usr/bin/gcc10-ld.bfd /usr/bin/ld && \
   ln -s /usr/bin/gcc10-strip /usr/bin/strip && \
   ln -s /usr/bin/gcc10-ranlib /usr/bin/ranlib && \
   ln -s /usr/bin/gcc10-readelf /usr/bin/readelf && \
@@ -56,7 +56,8 @@ RUN \
 ENV \
   PKG_CONFIG="pkg-config --static" \
   PLATFORM="linux-x64" \
-  FLAGS="-march=nehalem" \
+  FLAGS="-march=nehalem -fuse-ld=bfd" \
+  RUSTFLAGS="-Clink-arg=-fuse-ld=bfd" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
