--- a/npm/win32-ia32/package.json
+++ b/npm/win32-ia32/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips-win32-ia32",
-  "version": "1.2.0-rc.6",
+  "version": "1.2.0",
   "description": "Prebuilt libvips and dependencies for use with sharp on Windows x86",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://sharp.pixelplumbing.com",
