linux-armv6: Use Debian Buster EOL, has correct archive URL

--- a/platforms/linux-armv6/Dockerfile
+++ b/platforms/linux-armv6/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster
+FROM debian/eol:buster
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create Debian 11 (glibc 2.31) container suitable for cross-compiling Linux ARMv6 binaries
