Remove unused dependency on Python packaging module
No longer needed by GLib, see:
https://gitlab.gnome.org/GNOME/glib/-/commit/38faeca62ebd5be89b1ec3e6c530e499ce2d7240

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           pipx install meson==1.7.2
-          brew install automake nasm python-packaging
+          brew install automake nasm
       - name: Build ${{ matrix.platform }}
         run: ./build.sh ${{ matrix.platform }}
       - name: Upload ${{ matrix.platform }} artifact
