--- a/platforms/linux-arm64v8/Dockerfile
+++ b/platforms/linux-arm64v8/Dockerfile
@@ -54,7 +54,7 @@ RUN \
     && \
   cargo install cargo-c --locked && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
-  pip3 install meson==1.7.2 ninja packaging tomli
+  pip3 install meson==1.7.2 ninja tomli
 
 # Compiler settings
 ENV \
