Unpin Meson from 1.7.2 to use latest 1.9.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          pipx install meson==1.7.2
+          pipx install meson
           brew install automake nasm
       - name: Build ${{ matrix.platform }}
         run: ./build.sh ${{ matrix.platform }}
