--- a/versions.properties
+++ b/versions.properties
@@ -1,28 +1,69 @@
-VERSION_AOM=3.12.1
-VERSION_ARCHIVE=3.8.1
-VERSION_CAIRO=1.18.4
-VERSION_CGIF=0.5.0
-VERSION_EXIF=0.6.25
-VERSION_EXPAT=2.7.1
-VERSION_FFI=3.5.2
-VERSION_FONTCONFIG=2.17.1
-VERSION_FREETYPE=2.13.3
-VERSION_FRIBIDI=1.0.16
-VERSION_GLIB=2.85.4
-VERSION_HARFBUZZ=11.4.5
-VERSION_HEIF=1.20.2
-VERSION_HWY=1.3.0
-VERSION_IMAGEQUANT=2.4.1
-VERSION_LCMS=2.17
+# VERSION_AOM=3.12.1
+# VERSION_ARCHIVE=3.8.1
+# VERSION_CAIRO=1.18.4
+# VERSION_CGIF=0.5.0
+# VERSION_EXIF=0.6.25
+# VERSION_EXPAT=2.7.1
+# VERSION_FFI=3.5.2
+# VERSION_FONTCONFIG=2.17.1
+# VERSION_FREETYPE=2.13.3
+# VERSION_FRIBIDI=1.0.16
+# VERSION_GLIB=2.85.4
+# VERSION_HARFBUZZ=11.4.5
+# VERSION_HEIF=1.20.2
+# VERSION_HWY=1.3.0
+# VERSION_IMAGEQUANT=2.4.1
+# VERSION_LCMS=2.17
+# VERSION_MOZJPEG=4.1.5
+# VERSION_PANGO=1.57.0
+# VERSION_PIXMAN=0.46.4
+# VERSION_PNG=1.6.50
+# VERSION_PROXY_LIBINTL=0.4
+# VERSION_RSVG=2.61.0
+# VERSION_SPNG=0.7.4
+# VERSION_TIFF=4.7.0
+# VERSION_VIPS=8.17.1
+# VERSION_WEBP=1.6.0
+# VERSION_XML2=2.14.5
+# VERSION_ZLIB_NG=2.2.5
+
+# Dependency version numbers
+#### VERSION_ZLIB_NG=2.2.1 ##### - DO NOT USE - zlib-ng is not compatible with libpng
+VERSION_ZLIB=1.3.1
+##############################
+VERSION_FFI=3.4.6
+VERSION_GLIB=2.81.1
+VERSION_XML2=2.13.3
+VERSION_EXIF=0.6.24
+VERSION_LCMS2=2.16
 VERSION_MOZJPEG=4.1.5
-VERSION_PANGO=1.57.0
-VERSION_PIXMAN=0.46.4
-VERSION_PNG=1.6.50
-VERSION_PROXY_LIBINTL=0.4
-VERSION_RSVG=2.61.0
+VERSION_PNG16=1.6.43
 VERSION_SPNG=0.7.4
-VERSION_TIFF=4.7.0
+VERSION_IMAGEQUANT=2.4.1
+VERSION_WEBP=1.4.0
+VERSION_TIFF=4.6.0
+VERSION_HWY=1.2.0
+VERSION_PROXY_LIBINTL=0.4
+VERSION_FREETYPE=2.13.3
+VERSION_EXPAT=2.6.2
+VERSION_ARCHIVE=3.7.2
+VERSION_FONTCONFIG=2.15.0
+VERSION_HARFBUZZ=9.0.0
+VERSION_PIXMAN=0.43.0
+VERSION_CAIRO=1.18.0
+VERSION_FRIBIDI=1.0.15
+VERSION_PANGO=1.54.0
+VERSION_RSVG=2.58.93
+VERSION_AOM=3.9.1
+VERSION_HEIF=1.18.2
+VERSION_CGIF=0.4.1
+
+VERSION_POPPLER=24.08.0
+VERSION_OPENJPEG2=2.5.0
+VERSION_LIBDE265=1.0.15
+# VERSION_GIFSICLE=1.94
+VERSION_PNGQUANT=2.18.0
+VERSION_IMAGEMAGICK=7.1.1-4
+VERSION_OPENCV=4.10.0
+VERSION_GHOSTSCRIPT=10.04.0
 VERSION_VIPS=8.17.1
-VERSION_WEBP=1.6.0
-VERSION_XML2=2.14.5
-VERSION_ZLIB_NG=2.2.5
