--- a/npm/linux-x64/package.json
+++ b/npm/linux-x64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips-linux-x64",
-  "version": "1.2.2-rc.2",
+  "version": "1.2.2",
   "description": "Prebuilt libvips and dependencies for use with sharp on Linux (glibc) x64",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://sharp.pixelplumbing.com",
