add custom @woss-io npm and add heic to libvips

--- a/npm/package.json
+++ b/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@img/sharp-libvips",
+  "name": "@woss-io/sharp-libvips",
   "version": "1.2.3",
   "private": "true",
   "workspaces": [
