--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,32 +25,32 @@ jobs:
         include:
           - os: 'ubuntu-24.04'
             platform: 'linux-x64'
-          - os: 'ubuntu-24.04'
-            platform: 'linux-armv6'
-          - os: 'ubuntu-24.04'
-            platform: 'linuxmusl-x64'
-          - os: 'ubuntu-24.04'
-            platform: 'linux-ppc64le'
-          - os: 'ubuntu-24.04'
-            platform: 'linux-riscv64'
-          - os: 'ubuntu-24.04'
-            platform: 'linux-s390x'
-          - os: 'ubuntu-24.04'
-            platform: 'dev-wasm32'
-          - os: 'ubuntu-24.04'
-            platform: 'win32-ia32'
-          - os: 'ubuntu-24.04'
-            platform: 'win32-x64'
-          - os: 'ubuntu-24.04'
-            platform: 'win32-arm64v8'
-          - os: 'macos-13'
-            platform: 'darwin-x64'
-          - os: 'macos-14'
-            platform: 'darwin-arm64v8'
-          - os: 'ubuntu-24.04-arm'
-            platform: 'linux-arm64v8'
-          - os: 'ubuntu-24.04-arm'
-            platform: 'linuxmusl-arm64v8'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'linux-armv6'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'linuxmusl-x64'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'linux-ppc64le'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'linux-riscv64'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'linux-s390x'
+          # - os: 'ubuntu-24.04'
+          #   platform: 'dev-wasm32'
+          # - os: 'ubuntu-24.04'
+            # platform: 'win32-ia32'
+          # - os: 'ubuntu-24.04'
+            # platform: 'win32-x64'
+          # - os: 'ubuntu-24.04'
+            # platform: 'win32-arm64v8'
+          # - os: 'macos-13'
+            # platform: 'darwin-x64'
+          # - os: 'macos-14'
+          #   platform: 'darwin-arm64v8'
+          # - os: 'ubuntu-24.04-arm'
+            # platform: 'linux-arm64v8'
+          # - os: 'ubuntu-24.04-arm'
+            # platform: 'linuxmusl-arm64v8'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
