--- a/versions.properties
+++ b/versions.properties
@@ -14,7 +14,7 @@ VERSION_HEIF=1.20.2
 VERSION_HWY=1.3.0
 VERSION_IMAGEQUANT=2.4.1
 VERSION_LCMS=2.17
-VERSION_MOZJPEG=4.1.5
+VERSION_MOZJPEG=0826579
 VERSION_PANGO=1.57.0
 VERSION_PIXMAN=0.46.4
 VERSION_PNG=1.6.50
