--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
             platform: 'win32-x64'
           - os: 'ubuntu-24.04'
             platform: 'win32-arm64v8'
-          - os: 'macos-13'
+          - os: 'macos-15-intel'
             platform: 'darwin-x64'
-          - os: 'macos-14'
+          - os: 'macos-15'
             platform: 'darwin-arm64v8'
           - os: 'ubuntu-24.04-arm'
             platform: 'linux-arm64v8'
@@ -77,7 +77,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Install Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version: '24'
       - name: Checkout
