--- a/npm/linux-s390x/package.json
+++ b/npm/linux-s390x/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips-linux-s390x",
-  "version": "1.2.4-rc.0",
+  "version": "1.2.4",
   "description": "Prebuilt libvips and dependencies for use with sharp on Linux (glibc) s390x",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://sharp.pixelplumbing.com",
