--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@img/sharp-libvips",
-  "version": "1.2.4-rc.0",
+  "version": "1.2.4",
   "private": "true",
   "workspaces": [
     "dev",
