--- a/versions.properties
+++ b/versions.properties
@@ -21,6 +21,7 @@ VERSION_PNG=1.6.53
 VERSION_PROXY_LIBINTL=0.5
 VERSION_RSVG=2.61.3
 VERSION_TIFF=4.7.1
+VERSION_UHDR=1.4.0
 VERSION_VIPS=8.17.3
 VERSION_WEBP=1.6.0
 VERSION_XML2=2.15.1
