CI: Avoid running scheduled jobs on forks

--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -6,6 +6,7 @@ on:
 permissions: {}
 jobs:
   latest:
+    if: github.repository_owner == 'lovell'
     permissions:
       contents: write
       pull-requests: write
