CI: Avoid hardcoded upstream repo owner
Co-authored-by: Lovell Fuller <lovell@users.noreply.github.com>

--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -6,7 +6,7 @@ on:
 permissions: {}
 jobs:
   latest:
-    if: github.repository_owner == 'lovell'
+    if: github.event.repository.fork == false
     permissions:
       contents: write
       pull-requests: write
