CI: Avoid running scheduled jobs on forks (#313)

--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -6,6 +6,7 @@ on:
 permissions: {}
 jobs:
   latest:
+    if: github.event.repository.fork == false
     permissions:
       contents: write
       pull-requests: write
