--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -15,13 +15,13 @@ jobs:
       - uses: actions/checkout@v6
       - id: latest
         run: |
-          ./check-latest-versions.sh
+          echo "updates=$(./check-latest-versions.sh)" >> $GITHUB_OUTPUT
           if [ -n "$(git status --porcelain)" ]; then
             echo "pr=true" >> $GITHUB_OUTPUT
           fi
       - uses: peter-evans/create-pull-request@v8
         if: steps.latest.outputs.pr
         with:
-          commit-message: 'Bump deps'
-          title: 'Bump deps'
+          commit-message: ${{ steps.latest.outputs.updates }}
+          title: ${{ steps.latest.outputs.updates }}
           delete-branch: true
