linux-arm64v8: upgrade to glibc 2.28 (Rocky Linux 8)

--- a/platforms/linux-arm64v8/Dockerfile
+++ b/platforms/linux-arm64v8/Dockerfile
@@ -1,29 +1,28 @@
-FROM arm64v8/amazonlinux:2
+FROM --platform=linux/arm64 rockylinux:8
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
-# Create Amazon Linux 2 (glibc 2.26) container suitable for building Linux ARM64v8-A binaries
+# Create Rocky Linux 8 (glibc 2.28) container suitable for building Linux ARM64v8-A binaries
 
 # Path settings
 ENV \
   RUSTUP_HOME="/usr/local/rustup" \
   CARGO_HOME="/usr/local/cargo" \
-  PATH="/usr/local/cargo/bin:$PATH"
+  PATH="/usr/local/cargo/bin:/opt/rh/gcc-toolset-15/root/usr/bin:$PATH"
 
 # Build dependencies
 RUN \
-  yum update -y && \
-  amazon-linux-extras install epel -y && \
-  yum install -y --setopt=tsflags=nodocs \
-    --exclude=gcc \
+  dnf update -y && \
+  dnf install -y epel-release && \
+  dnf config-manager --set-enabled powertools && \
+  dnf install -y --setopt=tsflags=nodocs \
     autoconf \
     automake \
     bzip2 \
-    cmake3 \
-    curl \
+    cmake \
     curl-devel \
-    gcc10 \
-    gcc10-binutils \
-    gcc10-c++ \
+    findutils \
+    gcc-toolset-15-gcc \
+    gcc-toolset-15-gcc-c++ \
     gettext \
     git \
     gperf \
@@ -31,22 +30,11 @@ RUN \
     make \
     openssl-devel \
     patch \
-    pkgconfig \
-    python3 \
+    pkgconf \
+    python3.12-pip \
     tar \
     xz \
     && \
-  ln -s /usr/bin/gcc10-gcc /usr/bin/cc && \
-  ln -s /usr/bin/gcc10-g++ /usr/bin/c++ && \
-  ln -s /usr/bin/gcc10-as /usr/bin/as && \
-  ln -s /usr/bin/gcc10-ar /usr/bin/ar && \
-  ln -s /usr/bin/gcc10-nm /usr/bin/nm && \
-  ln -s /usr/bin/gcc10-ld.bfd /usr/bin/ld && \
-  ln -s /usr/bin/gcc10-strip /usr/bin/strip && \
-  ln -s /usr/bin/gcc10-ranlib /usr/bin/ranlib && \
-  ln -s /usr/bin/gcc10-readelf /usr/bin/readelf && \
-  ln -sf /usr/bin/gcc10-ld.bfd /usr/bin/gcc10-ld && \
-  rm /usr/bin/gcc10-ld.gold && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
     --profile minimal \
@@ -54,12 +42,11 @@ RUN \
     --default-toolchain nightly \
     && \
   cargo install cargo-c --locked && \
-  ln -s /usr/bin/cmake3 /usr/bin/cmake && \
-  pip3 install meson ninja tomli
+  pip3.12 install meson ninja
 
 # Compiler settings
 ENV \
-  PKG_CONFIG="pkg-config --static" \
+  PKG_CONFIG="aarch64-linux-gnu-pkgconf --static" \
   PLATFORM="linux-arm64v8" \
   FLAGS="-march=armv8-a" \
   RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" \
@@ -67,3 +54,4 @@ ENV \
 
 COPY Toolchain.cmake /root/
 COPY meson.ini /root/
+COPY aarch64-linux-gnu-pkgconf /usr/bin
